Fix left spacing of background pattern of image left teaser cards

--- a/src/assets/custom/css/_sass/_teaser-group.scss
+++ b/src/assets/custom/css/_sass/_teaser-group.scss
@@ -22,7 +22,7 @@
     margin-bottom: 30px;
     width: calc(50% - 15px);
   }
-  @include large{
+  @include large {
     padding-left: $lateral-space--large;
     padding-right: $lateral-space--large;
   }
@@ -43,12 +43,15 @@
   }
 }
 
-.teaser-group__card:nth-of-type(odd) {
+.teaser-group__card:nth-of-type(odd)::after {
+  @include large {
+    left: 2 * $lateral-space--large;
+  }
   @include large-and-extra-large {
-    &::after {
-      left: 2 * $lateral-space--large;
-      right: 50%;
-    }
+    right: 50%;
+  }
+  @include extra-large {
+    left: $lateral-space--large;
   }
 }
 
@@ -72,35 +75,36 @@
     position: absolute;
     z-index: 10;
   }
-  @include large{
+  @include large {
     width: calc(57% - #{2 * $lateral-space--large});
   }
   @include large-and-extra-large {
     bottom: 40px;
     top: 0;
   }
-  @include extra-large{
+  @include extra-large {
     width: calc(57%);
   }
 
   .teaser-group__card:nth-of-type(odd) & {
     background-position: left center;
-    @include large{
+    @include large {
       left: $lateral-space--large;
     }
     @include extra-large {
       left: 0;
     }
   }
+
   .teaser-group__card:nth-of-type(even) & {
     background-position: right center;
-    @include large{
+    @include large {
       right: $lateral-space--large;
     }
     @include large-and-extra-large {
       left: auto;
     }
-    @include extra-large{
+    @include extra-large {
       right: 0;
     }
   }
@@ -164,6 +168,7 @@
       margin-left: 43%;
     }
   }
+
   .teaser-group__card:nth-of-type(even) & {
     @include large-and-extra-large {
       margin-right: 43%;
